[package]
name = "reconnaissance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reth-network = {git = "https://github.com/Will-Smith11/reth.git"}
reth-transaction-pool = {git = "https://github.com/Will-Smith11/reth.git"}
reth-primitives = {git = "https://github.com/Will-Smith11/reth.git"}
reth-provider = {git = "https://github.com/Will-Smith11/reth.git"}
reth-interfaces = {git = "https://github.com/Will-Smith11/reth.git"}
tokio = {version = "1.23.0", features = ["full"]}

futures = "0.3.25"
ethers =  { git = "https://github.com/gakonst/ethers-rs"}